@@ -1,0 +1,330 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u6771\u4eac\u7f8e\u98df\u5929\u5802 Azabudai Hills\uff1a\u7c73\u829d\u84ee\u661f\u7d1a\u9910\u5ef3\u3001\u7279\u8272\u5c0f\u5403\u3001\u7d14\u7d20\u53cb\u597d\u9910\u5ef3\u5168\u90fd\u6709\uff01", "description": "\u6771\u4eac\u7f8e\u98df\u5929\u5802 Azabudai Hills\uff1a\u7c73\u829d\u84ee\u661f\u7d1a\u9910\u5ef3\u3001\u7279\u8272\u5c0f\u5403\u3001\u7d14\u7d20\u53cb\u597d\u9910\u5ef3\u5168\u90fd\u6709\uff01", "url": "https://www.famechos.me/news/\u6771\u4eac\u7f8e\u98df\u5929\u5802 Azabudai Hills\uff1a\u7c73\u829d\u84ee\u661f\u7d1a\u9910\u5ef3\u3001\u7279\u8272\u5c0f\u5403\u3001\u7d14\u7d20\u53cb\u597d\u9910\u5ef3\u5168\u90fd\u6709\uff01/", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-10T16:40:48.875521+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/東京美食天堂 Azabudai Hills：米芝蓮星級餐廳、特色小吃、純素友好餐廳全都有！/"/>
+<meta name="description" content="東京美食天堂 Azabudai Hills 將米芝蓮星級餐廳、特色小吃、純素友好餐廳盡收眼底，讓您享受東京美食之旅！">
+
+<meta name="keywords" content="東京美食天堂, Azabudai Hills, 米芝蓮星級餐廳, 特色小吃, 純素友好餐廳, 東京美食, 日本美食, 美食天堂">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/東京美食天堂 Azabudai Hills：米芝蓮星級餐廳、特色小吃、純素友好餐廳全都有！/" />
+        <meta property="og:title" content="東京美食天堂 Azabudai Hills：米芝蓮星級餐廳、特色小吃、純素友好餐廳全都有！" />
+        <meta property="og:description" content="東京美食天堂 Azabudai Hills：米芝蓮星級餐廳、特色小吃、純素友好餐廳全都有！" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="東京美食天堂 Azabudai Hills：米芝蓮星級餐廳、特色小吃、純素友好餐廳全都有！" />
+        <meta property="twitter:description" content="東京美食天堂 Azabudai Hills：米芝蓮星級餐廳、特色小吃、純素友好餐廳全都有！" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>東京美食天堂 Azabudai Hills：米芝蓮星級餐廳、特色小吃、純素友好餐廳全都有！</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">Others</p>
+          <p class="news-date">10/10/2024</p>
+        </div>
+	<p>Azabudai Hills是東京的一個美食天堂，提供從米芝蓮星級餐廳到休閒咖啡店和食品車的多樣選擇。無論您是想品嚐日本美食還是國際美食，都可以在這裡找到適合您的選擇。以下是我們對Azabudai Hills美食的推薦。</p>
+<h2>1. Discover the Delights of Sushi Azabu</h2>
+<p>Sushi Azabu是國際知名的Azabu餐廳系列在東京的最新分店。這家餐廳的紐約和邁阿密分店都曾獲得米芝蓮星級獎。Azabudai Hills的Sushi Azabu餐廳結合了現代設計和傳統美學，餐廳內的書法裝飾由橋口林太郎設計。</p>
+<p>以下是Sushi Azabu的菜單價格：</p>
+<p>* 午餐：¥4,800起</p>
+<p>* 晚餐：¥9,800起</p>
+<p>您可以在網上預訂（通過Sushi Azabu網站）。</p>
+<h2>2. Discover the Delights of Hakata Tempura Takao Umu</h2>
+<p>Hakata Tempura Takao Umu是來自福岡的餐廳，專門提供博多風天婦羅。博多風天婦羅的特色是每件天婦羅都是直接從油鍋中取出，而不是等待所有食物都準備好。這意味著您的餐點將會一件件熱騰騰地端上桌。</p>
+<p>以下是Hakata Tempura Takao Umu的菜單價格：</p>
+<p>* 午餐：¥1,500起</p>
+* 晚餐：¥2,000起<h2>推薦餐廳</h2>
+<p>以下是我在東京發現的幾家不錯的餐廳：</p>
+<h2>Takao: The Epitome of Hakata Tempura</h2>
+<p>這家餐廳提供各種美味的天婦羅套餐和單點菜單。午餐時，您可以選擇各種套餐或天婦羅碗。晚餐時，您可以選擇套餐、天婦羅套餐或單點菜單。請注意，這家餐廳一般不接受預訂，但如果您會說日語，您可以提前打電話詢問餐廳是否繁忙。</p>
+<h2>Kawamura: Home of Delicious Tonkatsu</h2>
+<p>這家餐廳提供高品質的豬排套餐。午餐和晚餐的菜單相同，提供各種套餐。每個套餐都附有米飯、味噌湯和卷心菜。您還可以選擇不同的豬排切法。Tonkatsu Kawamura的預訂可以在網上進行。</p>
+<h2>Step 3: Establish</h2>
+<p>對於喜歡純素和植物性食物的朋友來說，Azabudai Hills有一家專門的純素友好餐廳。8ablish旨在成為一個讓每個人都可以分享健康美味餐點的地方。所有食物都完全不含肉類和其他動物製品，他們還提供各種無麩質選擇。</p>
+<table>
+<tr>
+<th>餐廳</th>
+<th>價格</th>
+</tr>
+<tr>
+<td>Hakata Tempura Takao</td>
+<td>午餐：¥1,000起，晚餐：¥2,000起</td>
+</tr>
+<tr>
+<td>Tonkatsu Kawamura</td>
+<td>午餐：¥1,500起，晚餐：¥1,500起</td>
+</tr>
+<tr>
+<td>8ablish</td>
+<td>早餐：¥750起，午餐：¥2,200起，晚餐：¥2,500起</td>
+</tr>
+</table>
+<h2>探索東京的美食天堂：8間不能錯過的餐廳</h2>
+<p>東京是美食愛好者的天堂，高級餐廳和特色小吃應有盡有。以下介紹8間必訪餐廳，讓你體驗東京的美食之旅。</p>
+<h2>1. Establish a Strong Foundation with 8ablish</h2>
+<p>8ablish是一間多功能餐廳，提供輕食、零食和甜點，包括早餐。你也可以享受天然葡萄酒和清酒，或者購買餅乾禮盒送給朋友。餐廳接受電話預訂，亦有網上商店。</p>
+<h2>Dining at Hills House 33</h2>
+<p>Hills House Dining 33是東京塔景色的高級餐廳，提供法式餐點帶有日本風味。午餐和晚餐都有套餐菜單，使用當地的季節食材。飲料菜單有法國葡萄酒、雞尾酒和其他酒精和非酒精飲料。你可以在Hills House Dining 33的網站上預訂。</p>
+<p>同層的Hills House Sky Café and Bar提供更休閒的用餐環境。</p>
+<h2>3. Discover the Delights of Saawaan Bistro</h2>
+<h2>Experience Fine Dining at Saawaan Bistro</h2>
+<p>位於Azabudai Hills的Saawaan Bistro是一間充滿希望的餐廳。它的主要店鋪在曼谷有一顆米其林星星，提供現代泰國菜，由獲獎的廚師準備。</p>
+<p>午餐時段，你可以享受試菜單，選擇主菜。晚餐時段，你可以從 à la carte 菜單中選擇。還有一個獨立的酒吧區域，你可以享受Saawaan的特色雞尾酒和其他飲料，以及tapas風格的試菜。</p>
+<h2>Aldo: A Taste of Peru in Our 4th Featured Restaurant</h2>
+<p>如果你想體驗秘魯的美食，但無法親自前往，Peruvian Restaurant Aldo是你的最佳選擇。這間餐廳提供經典的南美菜餚，如ceviche，以及原創菜餚，利用秘魯的許多超級食物。</p>
+<p>Aldo提供午餐和晚餐的套餐菜單，以及特別的 Chef’s Lunch 和 Weekday Lunch 選擇。</p>
+<h2>5. Discover the Delights of Nihombashi Sembikiya</h2>
+<p>如果你有甜牙，Nihombashi Sembikiya是你的天堂。這間餐廳是最新加入的一系列水果店鋪，成立於1834年。它提供所有相同的菜單選擇，如主店鋪，但在更豪華的環境中。</p>
+<h2>甜品多樣化的美味體驗</h2>
+<p>位於日本橋的Sembikiya甜品店提供各種新鮮時令水果製作的甜品，無論你喜歡繽紛的 parfait、精緻的蛋糕，還是經典的水果三明治，都可以在這裡找到。部分菜單項目可以預訂。</p>
+<h2>9. 流動美食 - 食品卡車</h2>
+<p>在麻布台山的中央綠地，您會發現兩輛舒適的小食品卡車，一輛賣冰淇淋，另一輛賣可麗餅。這兩種食品都適合作為快餐——我個人喜歡焦糖可麗餅。這些食品卡車沒有專門的座位區域，但綠地周圍有許多地方可以坐下。</p>
+<ul>
+<li>可麗餅、冰淇淋價格從680日元起</li>
+</ul>
+<h2>10% of Pure Arabica Goodness</h2>
+<p>在麻布台山有兩家 % Arabica 店鋪，肯定能夠滿足您的咖啡需求。這個咖啡品牌最初於2013年在香港創立，2014年在京都開設旗艦店。截至目前，已在20個國家開設了150多家店鋪，真正做到了“通過咖啡看世界”。</p>
+<ul>
+<li>咖啡價格從550日元起</li>
+</ul>
+<h2>11. A Bar for Lovers: 戀人酒廊</h2>
+<p>如果您想在晚上喝一杯，那就去戀人酒廊吧。由於它與鮨麻布同屬一家公司，因此也是本次介紹的完美結尾。這家氣氛浪漫的酒吧專門提供威士忌，菜單上有日本、蘇格蘭和美國的各種威士忌。如果您不是威士忌愛好者，也可以點其他酒精飲料，如雞尾酒和葡萄酒。戀人酒廊還提供小吃、輕餐和甜品。</p>
+<ul>
+<li>威士忌酒吧價格從1,000日元起</li>
+</ul>
+<h2>經常被問到的問題</h2>
+<p><p>我需要預訂才能在麻布台山的餐廳用餐嗎？</p>麻布台山的餐廳預訂與米其林星級</p>
+<p>在麻布台山用餐是否需要預訂？</p>
+<p>其實不需要預訂，但預訂是強烈建議的。如果沒有預訂，最好在餐廳開門時就去，以免等待。</p>
+<p>麻布台山有米其林星級餐廳嗎？</p>
+<h2>探索麻布台的餐飲選擇</h2>
+<p>麻布台目前只有一家米芝蓮星級餐廳，名為Florilège。不過，Sushi Azabu和Saawaan Bistro也來自米芝蓮背景。</p>
+<h2>在麻布台的餐廳，是否提供英文菜單呢？</h2>
+<p>是的，所有餐廳都有英文菜單。然而，在某些情況下，翻譯可能會有一些限制。</p>
+<h2>重要须知</h2>
+<p>我們盡力確保資訊的正確性，但資訊可能會有變動。</p>
+
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ClGEF6g87-A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： Tokyo Cheapo</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
