@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Thu, 10 Oct 2024 16:34:30 +0800</lastBuildDate>
+  <lastBuildDate>Thu, 10 Oct 2024 16:45:28 +0800</lastBuildDate>
 
   <item>
   <title>東京藝妓文化大揭秘！體驗傳統日本的祕密花街</title>
@@ -31,5 +31,11 @@
   <description>東京隱藏的寶藏！全女性演員主演的「The Show」在神田明神神社上演，體驗日本傳統文化的獨特魅力</description>
   <category>Others</category>
   <pubDate>Thu, 10 Oct 2024 16:34:30 +0800</pubDate>
+</item><item>
+  <title>東京美食天堂 Azabudai Hills：米芝蓮星級餐廳、特色小吃、純素友好餐廳全都有！</title>
+  <link>https://www.famechos.me/news/東京美食天堂 Azabudai Hills：米芝蓮星級餐廳、特色小吃、純素友好餐廳全都有！/</link>
+  <description>東京美食天堂 Azabudai Hills：米芝蓮星級餐廳、特色小吃、純素友好餐廳全都有！</description>
+  <category>Others</category>
+  <pubDate>Thu, 10 Oct 2024 16:45:28 +0800</pubDate>
 </item></channel>
 </rss>
