@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Thu, 10 Oct 2024 16:36:37 +0800</lastBuildDate>
+  <lastBuildDate>Thu, 10 Oct 2024 16:45:28 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -130,5 +130,11 @@
   <description>K-pop 界大事！NCT Dream 將在首爾高尺天空巨蛋舉行三場演唱會、G Dragon 回歸拍攝音樂錄影帶、Blackpink Jennie 個人單曲預告、IU 與 Billlie 合作</description>
   <category>K-Pop</category>
   <pubDate>Thu, 10 Oct 2024 16:36:37 +0800</pubDate>
+</item><item>
+  <title>東京美食天堂 Azabudai Hills：米芝蓮星級餐廳、特色小吃、純素友好餐廳全都有！</title>
+  <link>https://www.famechos.me/news/東京美食天堂 Azabudai Hills：米芝蓮星級餐廳、特色小吃、純素友好餐廳全都有！/</link>
+  <description>東京美食天堂 Azabudai Hills：米芝蓮星級餐廳、特色小吃、純素友好餐廳全都有！</description>
+  <category>Others</category>
+  <pubDate>Thu, 10 Oct 2024 16:45:28 +0800</pubDate>
 </item></channel>
 </rss>
