@@ -54,3 +54,4 @@ https://www.koreaherald.com/view.php?ud=20241008050665
 https://tokyocheapo.com/living/moving-to-japan-hacks/
 https://www.koreaherald.com/view.php?ud=20241008050610
 https://tokyocheapo.com/entertainment/movies-theatre/kanda-myojin-show/
+https://www.koreaherald.com/view.php?ud=20241008050607
